--- a/om_mig.html
+++ b/om_mig.html
@@ -26,7 +26,7 @@
       <p class="p3">Att bli en skicklig webbutvecklare och skapa kreativa, tekniskt smarta och användarvänliga lösningar som gör en positiv skillnad.</p>
   </div>
   <div class="item-image">
-      <img src="Cv projekt\Bild4.jpg" alt="Bild på en cool och drippy katt">
+      <img src="Bild4.jpg" alt="Bild på en cool och drippy katt">
   </div>
 </div>
 </body>
