--- a/skola.html
+++ b/skola.html
@@ -22,10 +22,10 @@
 <div class="about-section">
   <div class="bubble1">Min skola</div> 
   <div class="item-image1">
-      <img src="Cv projekt/1i7tnvie6-jP4MA8Dr-large-contained.jpeg" alt="Bild på utsidan av skolan">
+      <img src="1i7tnvie6-jP4MA8Dr-large-contained.jpeg" alt="Bild på utsidan av skolan">
   </div>
   <div class="item-image2">
-      <img src="Cv projekt/images.jpg" alt="Bild på skolans loga"> 
+      <img src="images.jpg" alt="Bild på skolans loga"> 
   </div>
 </div>
 <div class="bubble2">
