--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="info-section">
     <div class="section-title">
-        <a href="om_mig.html" class="link">Hem</a> 
+        <a href="index.html" class="link">Hem</a> 
         <a href="om_mig.html" class="link">Om mig</a> 
         <a href="skola.html" class="link">Min skola</a> 
         <a href="intressen.html" class="link">Intressen</a>
